# meshrustic

./: .gitattributes  .gitignore  Cargo.toml  LICENSE  LICENSE-COMMERCIAL.md  LICENSE.md  NOTICE  README.md  docker-compose.ci.yml  docker-compose.override.yml  docker-compose.yml  just  justfile
.github/workflows/: ci.yml
boards/esp32-c3/: rust-toolchain.toml
boards/esp32-c6/: rust-toolchain.toml
boards/esp32-c6/.cargo/: config.toml
boards/nrf52840/: Cargo.toml  build.rs  memory-nicenano.x  memory.x  rust-toolchain.toml
boards/nrf52840/.cargo/: config.toml
boards/nrf52840/scripts/: make-uf2.sh
boards/nrf52840/src/: battery.rs  main.rs  node.rs
boards/nrf52840/src/lora/: dual_radio.rs  mod.rs  module_profile.rs  pins.rs  radio_task.rs  sx1262.rs
boards/nrf52840/src/usb/: log.rs  mod.rs  task.rs
boards/rp2040/: rust-toolchain.toml
boards/rp2040/.cargo/: config.toml
boards/rpi-app/: Cargo.toml
boards/rpi-app/.cargo/: config.toml
boards/rpi-app/src/: main.rs
boards/rpi-app/tests/: bridge_policy.rs  channel_hash.rs  crypto_store.rs  direct_packet.rs  downstream_table.rs  dupe_handling.rs  egress_model.rs  field_validation.rs  graph_topology.rs  header.rs  multi_radio_graph.rs  nodeinfo_wire.rs  opaque_relay.rs  packet_pool.rs  placeholder_resolve.rs  portnum_classify.rs  power_policy.rs  protobuf_roundtrip.rs  radio_airtime.rs  rate_limit_behavior.rs  relay_identity.rs  reliable_want_ack.rs  routing_capability.rs  routing_next_hop.rs  routing_relay.rs  sr_coverage.rs  sr_health.rs  sr_slot_schedule.rs  telemetry_wire.rs  three_node_sr_bench.rs  topology_wire.rs  traceroute_relay.rs  unicast_hop_limit.rs
crates/mesh-crypto/: Cargo.toml
crates/mesh-crypto/src/: aes.rs  aes_ccm.rs  channel.rs  channel_hash.rs  hash.rs  key.rs  lib.rs  nonce.rs  pki.rs
crates/mesh-protocol/: Cargo.toml  README.md  build.rs
crates/mesh-protocol/proto/meshwire/: config.proto  packet.proto  portnums.proto
crates/mesh-protocol/src/: constants.rs  direct.rs  header.rs  lib.rs  portnum.rs
crates/mesh-radio/: Cargo.toml
crates/mesh-radio/src/: airtime.rs  bus.rs  channel.rs  config.rs  frame.rs  interface.rs  lib.rs  packet_time.rs  queue.rs  slot.rs  timing.rs
crates/mesh-routing/: Cargo.toml
crates/mesh-routing/src/: bridge.rs  broadcast_relay.rs  capability.rs  coordinated_relay.rs  lib.rs  neighbor_graph.rs  nodeinfo.rs  packet_history.rs  pool.rs  qos.rs  rate_limit.rs  relay.rs  relay_identity.rs  reliable.rs  router.rs  routing_ack.rs  rx_decode.rs  sr_log.rs  telemetry.rs  topology.rs  traceroute.rs
crates/mesh-routing/src/graph/: downstream.rs  edge.rs  etx.rs  mod.rs  placeholder.rs  route.rs
crates/mesh-store/: Cargo.toml
crates/mesh-store/src/: config.rs  keygen.rs  layout.rs  lib.rs
docker/: Dockerfile
