[package]
name = "mesh-crypto"
version.workspace = true
edition.workspace = true
license.workspace = true
publish.workspace = true
description = "MeshRustic crypto (AES-CTR channel, optional PKI)"

[dependencies]
aes = { version = "0.8", default-features = false }
sha2 = { version = "0.10", default-features = false, features = ["oid"] }
x25519-dalek = { version = "2", default-features = false, features = ["static_secrets"], optional = true }

[features]
default = []
pki = ["x25519-dalek"]
std = []

[dev-dependencies]
hex = "0.4"
