[package]
name = "mesh-protocol"
version.workspace = true
edition.workspace = true
license.workspace = true
publish.workspace = true
description = "Mesh air wire header and protobuf payload types for MeshRustic"

[features]
default = []
prost = ["dep:prost"]

[dependencies]
prost = { version = "0.13", optional = true }

[build-dependencies]
prost-build = "0.13"
